Photos: Fix issues with widget blocks centre alignments, and text alignments for full alignment. Add styles to the default placeholder.

--- a/photos/blocks.css
+++ b/photos/blocks.css
@@ -428,10 +428,23 @@ Widgets
 
 .wp-block-categories.aligncenter,
 .wp-block-categories.aligncenter ul,
+.wp-block-archives.aligncenter,
 .wp-block-latest-posts.aligncenter,
-.wp-block-archives.aligncenter {
+.wp-block-latest-comments.aligncenter {
 	list-style-position: inside;
 	text-align: center;
+}
+
+.wp-block-categories.alignfull,
+.wp-block-archives.alignfull,
+.wp-block-latest-posts.alignfull {
+	text-align: left;
+}
+
+.rtl .wp-block-categories.alignfull,
+.rtl .wp-block-archives.alignfull,
+.rtl .wp-block-latest-posts.alignfull {
+	text-align: right;
 }
 
 /* Latest comments */
